tests/sqlcmd/baselines/errors/load_classes4.errbaseline
Jar file not found: 'non-existent.jar'
